upload para branch principal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=stationOne
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #server.port=8085
+spring.jpa.database-platform=rg.hibernate.dialect.MySQL8Dialect
 
 
 
